k8s/amarcord/original-solution0-dmarzi/_ORIGINAL/cluster1/cluster1_service_exporter.yaml
# Copyright 2022 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

---
apiVersion: v1
kind: Service
metadata:
  name: dmarzi-app-web-01
spec:
  ports:
  - port: 8080
    name: http
  selector:
    # dmarzi@ wise words: "no you cant use two selectors in OR (prod or canary) but you can choose ANY selector" => 
    # I've added to kustomize for both python and ruby a ricc-awesome-selector: canary-or-prod for those two statuses. I'm strating to LOVE this!
    ricc-awesome-selector: canary-or-prod
#    app: app01-web
#    app: webapp01-python
#    app-selettore: app01-in-python
