k8s/amarcord/original-solution0-dmarzi/_ORIGINAL/cluster1/cluster1-gateway-but-later.yaml
# Copyright 2022 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1alpha2
metadata:
  name: internal-store-route
  namespace: default
  labels:
    gateway: dmarzi-apps-http
spec:
  parentRefs:
  - kind: Gateway
    namespace: default
    name: dmarzi-apps-http
  hostnames:
  - "apps.example.internal"
  rules:
  - backendRefs:
    # 90% of traffic to store-west-1 ServiceImport
    - name: dmarzi-app-web-01
      group: net.gke.io
      kind: ServiceImport
      port: 8080
      weight: 90
    # 10% of traffic to store-west-2 ServiceImport
    - name: dmarzi-app-web-02
      group: net.gke.io
      kind: ServiceImport
      port: 8080
      weight: 10
